# alpaca-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backtests/: backtest_stoch_rsi_mfi.py  crypto_momentum.py  crypto_momentum_sweep.py  crypto_momentum_validate.py  crypto_swing.py  deflated_sharpe.py  monthly_returns.py  param_sweep.py  portfolio.py  research_portfolio.py  research_profit.py  research_xsec.py  strategies.py  universe.py  validate.py  walk_forward.py
bot/: __init__.py  alerting.py  config.py  heartbeat.py  logging_setup.py  models.py  run.py
bot/data/: __init__.py  historical.py  stream.py
bot/execution/: __init__.py  broker.py
bot/indicators/: __init__.py  divergence.py  money_flow.py  stoch_rsi.py
bot/risk/: __init__.py  manager.py
bot/state/: __init__.py  ledger.py
bot/strategy/: __init__.py  base.py  breakout.py  mean_reversion.py  stoch_rsi_mfi.py  swing_exits.py  trend_momentum.py
dashboard/: app.py  charts.py
data/: heartbeat.json
docs/: CRYPTO_NEWS_APIS.md  IMPROVEMENTS.md  PLAN.md  SWING_TRADING_PLAN.md
scripts/: go_live_check.py  run_crypto.ps1  run_windows.ps1  smoke_test.py  watchdog.py
tests/: test_breakout.py  test_broker.py  test_config.py  test_dashboard.py  test_deflated_sharpe.py  test_historical.py  test_indicators.py  test_ledger.py  test_mean_reversion.py  test_observability.py  test_portfolio.py  test_research_gates.py  test_risk.py  test_run_market_routing.py  test_run_safety.py  test_strategy.py  test_swing_exits.py  test_trend_momentum.py  test_validate.py  test_walk_forward.py
